--- a/.gitattributes
+++ b/.gitattributes
@@ -340,6 +340,8 @@ icu4j/src/com/ibm/richtext/demo/package.html svneol=native#text/html
 icu4j/src/com/ibm/richtext/print/package.html svneol=native#text/html
 icu4j/src/com/ibm/richtext/styledtext/package.html svneol=native#text/html
 icu4j/src/com/ibm/richtext/swingui/package.html svneol=native#text/html
+icu4j/src/com/ibm/richtext/textapps/resources/unicode.arabic.red -text
+icu4j/src/com/ibm/richtext/textapps/resources/unicode.hebrew.red -text
 icu4j/src/com/ibm/richtext/textformat/package.html svneol=native#text/html
 icu4j/src/com/ibm/richtext/textlayout/attributes/package.html svneol=native#text/html
 icu4j/src/com/ibm/richtext/textpanel/package.html svneol=native#text/html
