--- a/.gitattributes
+++ b/.gitattributes
@@ -430,6 +430,7 @@ tools/unicodetools/com/ibm/text/UCA/index_header.html svneol=native#text/html
 tools/unicodetools/com/ibm/text/UCA/name_help.html svneol=native#text/html
 tools/unicodetools/com/ibm/text/UCA/norm_help.html svneol=native#text/html
 tools/unicodetools/com/ibm/text/UCA/norm_index_header.html svneol=native#text/html
+tools/unicodetools/com/ibm/text/UCD/StandardizedVariants-Template.html svneol=native#text/html
 tools/unicodetools/com/ibm/text/data/CheckCollationValidity.html svneol=native#text/html
 tools/unicodetools/com/ibm/text/data/UCA_Rules.xml svneol=native#text/xml
 tools/unicodetools/com/ibm/text/data/UCA_Rules_SHORT.xml svneol=native#text/xml
