--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ icu4c/source/Makefile
 icu4c/source/README
 icu4c/source/allinone/*.ncb
 icu4c/source/allinone/*.opt
+icu4c/source/allinone/all/*.plg
 icu4c/source/common/*.ao
 icu4c/source/common/*.d
 icu4c/source/common/*.plg
@@ -112,6 +113,7 @@ icu4c/source/extra/ustdio/Release
 icu4c/source/extra/ustdio/libustdio.*
 icu4c/source/i18n/*.ao
 icu4c/source/i18n/*.d
+icu4c/source/i18n/*.plg
 icu4c/source/i18n/Debug
 icu4c/source/i18n/Makefile
 icu4c/source/i18n/Release
@@ -173,6 +175,7 @@ icu4c/source/test/cintltst/Release
 icu4c/source/test/cintltst/cintltst
 icu4c/source/test/collperf/Makefile
 icu4c/source/test/ieeetest/*.d
+icu4c/source/test/ieeetest/*.plg
 icu4c/source/test/ieeetest/Debug
 icu4c/source/test/ieeetest/Makefile
 icu4c/source/test/ieeetest/Release
@@ -293,6 +296,7 @@ icu4c/source/tools/gennorm/gennorm.[0-9]
 icu4c/source/tools/gennorm/tmp
 icu4c/source/tools/genpname/*.d
 icu4c/source/tools/genpname/*.pdb
+icu4c/source/tools/genpname/*.plg
 icu4c/source/tools/genpname/Debug
 icu4c/source/tools/genpname/Makefile
 icu4c/source/tools/genpname/Release
@@ -336,6 +340,7 @@ icu4c/source/tools/gentest/pkgdata
 icu4c/source/tools/gentest/tmp
 icu4c/source/tools/gentz/*.d
 icu4c/source/tools/gentz/*.pdb
+icu4c/source/tools/gentz/*.plg
 icu4c/source/tools/gentz/Debug
 icu4c/source/tools/gentz/Makefile
 icu4c/source/tools/gentz/Release
