ticket:3012: add stubdatabuilt.txt to .cvsignore X-Commit-URL: https://ssl.icu-project.org/trac/changeset/12420 Former-commit-id: 6b64fb963802474ab7bfd28a03521d8b9991684e

--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,7 @@ icu4c/source/stubdata/Debug
 icu4c/source/stubdata/Makefile
 icu4c/source/stubdata/Release
 icu4c/source/stubdata/libicu*.*
+icu4c/source/stubdata/stubdatabuilt.txt
 icu4c/source/test/Makefile
 icu4c/source/test/cintltst/*.d
 icu4c/source/test/cintltst/*.plg
