ticket:3012: Ignore the generated icu-config X-Commit-URL: https://ssl.icu-project.org/trac/changeset/12425 Former-commit-id: 54acc66171efb393d7cdc4d3f8391494c508adbc

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,7 @@ icu4c/source/config.cache
 icu4c/source/config.log
 icu4c/source/config.status
 icu4c/source/config/Makefile.inc
+icu4c/source/config/icu-config
 icu4c/source/data/*.exp
 icu4c/source/data/*.lib
 icu4c/source/data/*.obj
