--- a/.gitattributes
+++ b/.gitattributes
@@ -290,6 +290,11 @@ icu4j/license.html svneol=native#text/html
 icu4j/readme.html svneol=native#text/html
 icu4j/src/com/ibm/icu/dev/data/ThaiWordFreq.xls -text
 icu4j/src/com/ibm/icu/dev/data/holidays_jp.ucs -text svneol=native#application/octet-stream
+icu4j/src/com/ibm/icu/dev/data/nfscis.spp -text
+icu4j/src/com/ibm/icu/dev/data/nfscsi.spp -text
+icu4j/src/com/ibm/icu/dev/data/nfscss.spp -text
+icu4j/src/com/ibm/icu/dev/data/nfsmxp.spp -text
+icu4j/src/com/ibm/icu/dev/data/nfsmxs.spp -text
 icu4j/src/com/ibm/icu/dev/data/rbbi/english.dict -text svneol=native#application/octet-stream
 icu4j/src/com/ibm/icu/dev/data/thai6.ucs -text
 icu4j/src/com/ibm/icu/dev/demo/calendar/package.html svneol=native#text/html
@@ -327,6 +332,7 @@ icu4j/src/com/ibm/icu/impl/data/invuca.icu -text
 icu4j/src/com/ibm/icu/impl/data/package.html svneol=native#text/html
 icu4j/src/com/ibm/icu/impl/data/pnames.icu -text
 icu4j/src/com/ibm/icu/impl/data/ucadata.icu -text
+icu4j/src/com/ibm/icu/impl/data/uidna.spp -text
 icu4j/src/com/ibm/icu/impl/data/unames.icu -text
 icu4j/src/com/ibm/icu/impl/data/unorm.icu -text
 icu4j/src/com/ibm/icu/impl/data/uprops.icu -text
