--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ icu4c/source/Makefile
 icu4c/source/README
 icu4c/source/allinone/*.ncb
 icu4c/source/allinone/*.opt
+icu4c/source/allinone/*.suo
 icu4c/source/allinone/all/*.plg
 icu4c/source/common/*.ao
 icu4c/source/common/*.d
