add supplemental data X-Commit-URL: https://ssl.icu-project.org/trac/changeset/13302 Former-commit-id: 914476dab3773132f670e756c08aa931dbfe0371

--- a/.gitattributes
+++ b/.gitattributes
@@ -60,6 +60,7 @@ icu4c/source/data/xml/main/en_NZ.xml svneol=native#text/xml
 icu4c/source/data/xml/main/en_PH.xml svneol=native#text/xml
 icu4c/source/data/xml/main/en_SG.xml svneol=native#text/xml
 icu4c/source/data/xml/main/en_US.xml svneol=native#text/xml
+icu4c/source/data/xml/main/en_US_POSIX.xml svneol=native#text/xml
 icu4c/source/data/xml/main/en_VI.xml svneol=native#text/xml
 icu4c/source/data/xml/main/en_ZA.xml svneol=native#text/xml
 icu4c/source/data/xml/main/en_ZW.xml svneol=native#text/xml
